--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://chibik1307.github.io/myWeather/assets/logo.053f837c.svg" />
+    <link rel="icon" type="image/svg+xml" href="/myWeather/assets/logo.053f837c.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Weather</title>
-    <script type="module" crossorigin src="https://chibik1307.github.io/myWeather/assets/index.a72c2a50.js"></script>
-    <link rel="stylesheet" href="https://chibik1307.github.io/myWeather/assets/index.e170f573.css">
+    <script type="module" crossorigin src="/myWeather/assets/index.3564276b.js"></script>
+    <link rel="stylesheet" href="/myWeather/assets/index.35d942eb.css">
   </head>
   <body>
     <div id="root"></div>
