--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/myWeather/assets/logo.d8a9369e.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <title>My Weather</title>
     <script type="module" crossorigin src="/myWeather/assets/index.54d04a42.js"></script>
     <link rel="stylesheet" href="/myWeather/assets/index.4f3e455c.css">
