--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="http://localhost:5173/myWeather/assets/logo.d8a9369e.svg" />
+    <link rel="icon" type="image/svg+xml" href="/myWeather/assets/logo.d8a9369e.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Weather</title>
-    <script type="module" crossorigin src="http://localhost:5173/myWeather/assets/index.139067ad.js"></script>
-    <link rel="stylesheet" href="http://localhost:5173/myWeather/assets/index.defd6520.css">
+    <script type="module" crossorigin src="/myWeather/assets/index.d4415aba.js"></script>
+    <link rel="stylesheet" href="/myWeather/assets/index.4f3e455c.css">
   </head>
   <body>
     <div id="root"></div>
